--- a/_config.yml
+++ b/_config.yml
@@ -53,8 +53,7 @@ baseurl: "http://macmillanpublishers.github.io/blog"
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: redcarpet
-highlighter: pygments
+highlighter: rouge
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
